In custom.css, change .hll width to "auto" to avoid line wrap issue. Hide copy btn for line number column. Add MathJax required scripts to base.html and simple_base.html to handle equation auto numbering.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,3 +7,13 @@
 footer {
     max-height: 100px;
 }
+
+.highlight span.hll span {
+    background-color: #ffffcc;
+    display: inline-block;
+    width: auto; /* 100% is not working in some cases */
+}
+
+td.linenos .codecopy-btn {
+    display: none !important; /* Hide the button in the line numbers column */
+}
